<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".DunkinDonuts">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="323dp"
        android:contentDescription="@string/contentDescription"
        app:srcCompat="@drawable/dunkin" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_marginTop="10dp"
        android:text="@string/title1"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:text="@string/title1Address"
        android:textAlignment="center"
        android:textColor="@android:color/black" />

</RelativeLayout>